--- a/MiAngular/MiAngular.csproj
+++ b/MiAngular/MiAngular.csproj
@@ -14,6 +14,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.6" />
     <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="4.2.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -30,6 +36,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\chat\chat.component.ts" />
     <None Remove="ClientApp\src\app\message\message.component.ts" />
+    <None Remove="ClientApp\src\app\service\chat.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
